tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/serverfirst/tcp-server:DISABLE/DISABLE#01/_test_context/DestinationRule-PeerAuthentication.3497793817.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: c
  namespace: echo-2-98059
spec:
  host: c
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: c
  namespace: echo-2-98059
spec:
  mtls:
    mode: DISABLE
  selector:
    matchLabels:
      app: c
